# Dictionary

./: CMakeLists.txt  README.md
.github/workflows/: CMake-CI.yml  build-and-test.yml  c-cpp.yml
includes/: Dictionary.hpp  Exceptions.hpp  Node.hpp
src/: main.cpp
tests/: AddedChar.cpp  Equal.cpp  Fixtures.hpp  Mixed.cpp  RemovedChar.cpp  Substitution.cpp  main.cpp
